[package]
name = "just-convert"
description = "Easy conversion of structures"
version = "0.1.4"
edition = "2021"
authors = ["Vetti <vetti.ch@mail.ru>"]
license = "MIT"
keywords = ["struct", "convert", "macro"]
repository = "https://github.com/vettich/just-convert-rs.git"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["extra-traits", "full"] }
